--- a/Express/views/card.pug
+++ b/Express/views/card.pug
@@ -2,6 +2,10 @@ extends layout.pug
 block content
     section#content 
       h2= text 
+      if side === 'question'
+        a(href=`/cards/${id}/?side=answer`) Answer
+      else 
+        a(href=`/cards/${id}/?side=question`) Question
       if hint 
         p 
           i Hint: #{hint}
