--- a/Express/views/layout.pug
+++ b/Express/views/layout.pug
@@ -1,9 +1,8 @@
 doctype html
 html(lang="en")
   head
-    block style
     title Flash Cards
+    link(rel="stylesheet", href="/static/stylesheets/style.css")
   body
     include includes/header.pug
-    block content
-    include includes/footer.pug
+    block main
